<resources>
    <string name="app_name">AddReservation</string>
    <string name="EDIT">EDIT</string>
    <string name="DELETE">DELETE</string>
    <string name="CANCEL">CANCEL</string>
    <string name="Namekey">Name</string>
    <string name="Reservation1">Reservation Management</string>
    <string name="Reservaion2">Add Reservation</string>
    <string name="ReservationTravelling">Travelling for</string>
    <string name="ReservationLeisure">Leisure</string>
    <string name="ReservationBusiness">Business</string>
    <string name="ReservationCheckIn">Check In</string>
    <string name="ReservationCheckOut">Check Out</string>
    <string name="ReservationNext">Next</string>
    <string name="ReservationGuestRoom">Guest Per Room</string>
    <string name="ReservationRoom">Room</string>
    <string name="ReservationAdults">Adults</string>
    <string name="ReservationNights">Nights</string>
    <string name="ReservationOrder">Order</string>
    <string name="ReservationBreakfast">Breakfast</string>
    <string name="ReservationLunch">Lunch</string>
    <string name="ReservationDinner">Dinner</string>
    <string name="ReservationRoomType">Room Type</string>
    <string name="ReservationLuxury">Luxury</string>
    <string name="ReservationBudget">Budget</string>
    <string name="ReservationBasket">* Fruit basket and a bottle of wine will be provided</string>
    <string name="ReservationReservationManagement">Reservaion Mnagement</string>
    <string name="ReservationReservationName">Name</string>
    <string name="ReservationReservationRes">Reservation</string>
    <string name="Reservation01">01.</string>
    <string name="Reservation01Name">Name</string>
    <string name="Reservation02">02.</string>
    <string name="Reservation2Name">Name</string>
    <string name="Reservation03">03.</string>
    <string name="Reservation03Name">Name</string>
    <string name="Reservation04">04.</string>
    <string name="Reservation04Name">Name</string>
    <string name="Reservation05">05.</string>
    <string name="Reservation05Name">Name</string>
    <string name="ReservationGenerateReport">Generate Report</string>
    <string name="Reservationc">Cancel Reservation</string>
</resources>
